# mPABC

./: .env.example  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/business_coach/: config.py  exceptions.py  logging_config.py  main.py
src/business_coach/agents/: __init__.py  specialists.py  workflow.py
src/business_coach/db/: models.py  repository.py  schema.py
src/business_coach/dspy_modules/: modules.py
src/business_coach/export/: __init__.py  docx_exporter.py  latex_exporter.py  pdf_exporter.py
src/business_coach/gui/: canvas_panel.py  chat_panel.py  draft_panel.py  editable_field.py  idea_panel.py  layout.py  plan_panel.py  research_panel.py  settings_panel.py  voices_panel.py
src/business_coach/monitoring/: scheduler.py
src/business_coach/parsers/: web_search.py
src/business_coach/rag/: embeddings.py  engine.py
src/business_coach/templates/: base.html  canvas_template.html  plan_template.html  voices_template.html
tests/: conftest.py  test_voices_panel_bugs.py  test_voices_panel_preservation.py
tests/integration/: test_agents.py  test_checkpoint_resume.py  test_disclosure_flow.py  test_personality_settings_panel.py  test_personality_workflow.py  test_review_notes_workflow.py  test_workflow_e2e.py
tests/property/: test_bibtex_props.py  test_build_props.py  test_chat_prompt_props.py  test_disclosure_props.py  test_editable_field_props.py  test_export_props.py  test_http_integration_props.py  test_latex_converter_props.py  test_latex_export_props.py  test_llm_error_props.py  test_logging_props.py  test_parser_props.py  test_persistence_props.py  test_personality_properties.py  test_review_notes_properties.py  test_routing_props.py  test_scheduler_props.py  test_search_no_results_props.py  test_search_props.py  test_settings_props.py  test_sorting_props.py  test_specialist_props.py
tests/unit/: test_build_script.py  test_chat_panel.py  test_claims_drafting.py  test_config.py  test_consistency_review.py  test_db_repository.py  test_db_schema.py  test_description_drafting.py  test_disclosure.py  test_docx_exporter.py  test_draft_panel.py  test_dspy_modules.py  test_editable_field.py  test_embeddings.py  test_exceptions.py  test_latex_exporter.py  test_layout_tab_switch.py  test_logging.py  test_main.py  test_monitoring.py  test_novelty_analysis.py  test_parsers.py  test_personality.py  test_personality_config.py  test_personality_dspy.py  test_personality_modes.py  test_personality_repository.py  test_prior_art_search.py  test_property_graph.py  test_rag_engine.py  test_research_panel.py  test_review_notes.py  test_review_notes_dspy.py  test_review_notes_repository.py  test_settings_panel_latex.py  test_specialist_agents.py
