[project]
name = "business-coach"
version = "1.0.4"
description = "AI-powered Personal Artificial Business Coach"
readme = "README.md"
authors = [
    { name = "Hans Koehler", email = "hans@koehler.eu.com" }
]
requires-python = ">=3.13"
dependencies = [
    "nicegui",
    "langgraph",
    "llama-index",
    "dspy",
    "python-docx",
    "pydantic-settings",
    "markdown>=3.7",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "pymupdf>=1.27.2.2",
    "ddgs>=9.14.0",
    "weasyprint>=68.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mpabs = "business_coach.main:cli"
mpabc = "business_coach.main:cli"

[dependency-groups]
dev = [
    "hatchling",
    "hypothesis",
    "pytest",
    "pytest-cov",
    "python-semantic-release",
    "ruff",
    "ty",
]

[tool.uv]
package = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
build_command = ""
commit_message = "chore(release): v{version} [skip ci]"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]  # Long lines in string literals (prompts, docstrings) are acceptable

[tool.ty]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.rules]
# Suppress known false positives from third-party libraries
unknown-argument = "warn"
invalid-type-form = "warn"
